--- a/scripts/rmd_notebooks/preprocessing.Rmd
+++ b/scripts/rmd_notebooks/preprocessing.Rmd
@@ -34,11 +34,6 @@ line.width = 0.5
 pt.size=0.01
 pt.stroke=0.3
 label.size=2
-
-# colors
-colPals <- list()
-# colPals[["sample"]] <- ggsci::pal_rickandmorty()(meta_vis$sample %>% unique() %>% length())
-colPals[["celltypes"]] <- as.vector(pals::polychrome())[3:32]
 ```
 
 ## Plot themes 
@@ -55,7 +50,14 @@ scTheme <- scThemes(
 
 print(names(scTheme))
 ```
-
+```{r}
+mckolors <- read.csv("/home/dwm269/DWM_utils/plotting_utils/McKolors_v1.csv") %>% 
+  as.list() %>%
+  lapply(
+    # FUN=function(X) X[X!=""]
+  )
+mckolors
+```
 ## Read in metadata, `meta_vis`
 ```{r}
 meta_vis <- read.csv(
@@ -93,7 +95,7 @@ qualimap.df <- do.call(rbind,qualimap.list)
 print(colnames(qualimap.df))
 ```
 
-
+Line plot showing coverage across the (normalized) body of all genes; colored by the sample pre-processing (contrl/no preprocesssing, yPAP+SUPERase, or yPAP+Protector)
 ```{r message=FALSE}
 ggplot(
   qualimap.df,
@@ -179,7 +181,6 @@ ggplot(
 
 ```
 
-
 # Load and pre-process each of the datasets
 ## Read in matrices and initialize seurat objects - spaceranger
 ```{r}
@@ -205,8 +206,6 @@ for(i in 1:length(meta_vis$data.dir.spaceranger)){
   }else{
     cat("Data not found for # ", i, " (", meta_vis$data.dir.spaceranger[i], ")", "\n")
   }
-  
-  
 }
 ```
 
@@ -323,22 +322,28 @@ vis.list <- lapply(
 ```{r}
 library(SeuratDisk)
 # convert h5ad to h5seurat
-for(i in 1){#:nrow(meta_vis)
+for(i in 1:nrow(meta_vis)){
   tmp.h5 <- paste0(meta_vis$data.dir.kallisto[i],"/kb_out/counts_unfiltered/adata")
   if(!file.exists(paste0(tmp.h5,".h5seurat"))){
-    message(paste0("Converting h5seurat for",meta_vis$capture.area,"...\n"))
+    message(paste0("Converting h5seurat for",meta_vis$capture.area[i],"...\n"))
     Convert(
       paste0(tmp.h5,".h5ad"),
       dest = "h5seurat",
       overwrite = TRUE
     )
   }
-
+  
+  message(paste0("Loading & cleaning kallisto output for ",meta_vis$sample[i],"...\n"))
+  
   # Load h5seurat and subset out counts for sample
   tmp.seu <- LoadH5Seurat(
-    paste0(tmp.h5,".h5seurat")
-  ) %>% subset(
+    paste0(tmp.h5,".h5seurat"),
+  ) %>% subset( # select cells
     cells=Cells(vis.list[[i]])
+  )
+  tmp.seu <- subset( # Select features
+    tmp.seu,
+    features = rownames(tmp.seu)[Matrix::rowSums(tmp.seu) > 0]
   )
   
   # collapse multimappers
@@ -346,7 +351,7 @@ for(i in 1){#:nrow(meta_vis)
     tmp.seu,
     assay="RNA",
     new.assay.name = "RNA",
-    verbose=T
+    verbose=F
   )
   
   # convert ensembl IDs to MGI gene IDs
@@ -359,7 +364,6 @@ for(i in 1){#:nrow(meta_vis)
   )
   
   rm(tmp.seu)
-  rm(tmp.assay)
 }
 gc()
 
@@ -375,23 +379,16 @@ gc()
 #   )
 # }
 ```
-### Collapse multimappers, preprocess collapsed counts (kallisto)
+### Preprocess collapsed counts (kallisto)
 ```{r warning=FALSE}
-# vis.list <- lapply(
-#   vis.list,
-#   FUN = function(SEU) collapseMultimappers(
-#     SEU,
-#     assay="STARsolo",
-#     new.assay.name = "STARsolo_collapsed",
-#     verbose=T
-#     )
-# )
-# 
-# vis.list <- lapply(
-#   vis.list,
-#   FUN = function(SEU) seuPreProcess(SEU, assay="STARsolo_collapsed",verbose=F)
-# )
-
+vis.list <- lapply(
+  vis.list,
+  FUN = function(SEU) seuPreProcess(
+    SEU, 
+    assay="kallisto",
+    verbose=F
+  )
+)
 ```
 
 # Add spatial locations as a `reduction` (for easy plotting with DimPlot)
@@ -460,8 +457,9 @@ cat(
 ```
 
 ### gene set scores 
+#### STARsolo
+biomaRt gene biotype scores 
 ```{r paged.print=TRUE}
-# biomaRt gene biotype scores
 vis.list <- lapply(
   vis.list,
   FUN = function(SEU) seu_biotypes(
@@ -513,6 +511,21 @@ visListPlot(
 )
 ```
 
+#### STARsolo
+biomaRt gene biotype scores 
+```{r paged.print=TRUE}
+vis.list <- lapply(
+  vis.list,
+  FUN = function(SEU) seu_biotypes(
+    SEU=SEU,
+    biomart=mouse.info,
+    gene.colname = "ensembl_gene_id",
+    biotype.colname = "gene_biotype",
+    assay = "kallisto"
+  )
+)
+```
+
 
 # Save visium list(s)
 ```{r}
@@ -548,7 +561,7 @@ save(
 
 
 ## Plot gene biotype info
-###
+### merged - scatter plot
 ```{r}
 if(!exists("vis.merged")){
   vis.merged <- merge(
@@ -589,13 +602,19 @@ ggplot(
 ```
 ### Gene biotype spatial plots
 ```{r Biotype spatial plots, fig.height=10, fig.width=17, message=FALSE, warning=FALSE, paged.print=TRUE}
-
+i = c(
+  1:3, # SkM ctrl
+  # 4,6,7,5,8,9, # SkM SUPERase
+  12,13,10,11 # # SkM Protector
+  )
 visListPlot(
-  vis.list[12:15],
-  sample.titles = stringr::str_remove_all(meta_vis$sample,pattern = "Vis_") %>%
-    stringr::str_remove_all(pattern ="yPAP_")%>%
-    stringr::str_remove_all(pattern ="ctrl_"),
-  assay="STARsolo_collapsed",
+  vis.list[i],
+  sample.titles = stringr::str_remove_all(meta_vis$sample[i],pattern = "Vis_") %>%
+        stringr::str_remove_all(pattern ="yPAP_")%>%
+        stringr::str_remove_all(pattern ="ctrl_")%>%
+        stringr::str_remove_all(pattern ="_Heart")%>%
+        stringr::str_remove_all(pattern ="_SkM"),
+  # assay="STARsolo_collapsed",
   reduction="space",
   # slot = 'counts',
   pt.size=0.6,
@@ -605,36 +624,49 @@ visListPlot(
   nrow = 1,
   combine = T,
   verbose=F,
-  colormap=c("deepskyblue","firebrick"),
+  # colormap=c("deepskyblue","firebrick"),
+  colormap = mckolors$cubs,
   features = c(
-    "nFeature_STARsolo","nCount_STARsolo",
-    "percent.mt",
+    # "nFeature_STARsolo","nCount_STARsolo","percent.mt",
     "pct.protein_coding",
-    "pct.lncRNA",
+    # "pct.lncRNA",
     "pct.rRNA",
-    "pct.Mt_rRNA", 
+    # "pct.Mt_rRNA", 
     "pct.Mt_tRNA",
     # "pct.ribo.pp",
     "pct.snoRNA",
-    "pct.miRNA"
-    # "pct.snRNA"
+    "pct.miRNA",
+    "pct.snRNA"
   ) 
 )
-#&scale_color_gradientn(
-  # colours = c("deepskyblue","firebrick"),
-  # na.value = gray(0.1)
-# )%>% wrap_plots(
-#   nrow=1
-# )
-
-# %>% lapply(
-#   FUN = function(X) X + theme(
-#     axis.title.y = element_text(angle = 0)
-#   )
-# ) %>% wrap_plots(
-#   nrow=1
-# )
 ```
+
+```{r}
+i = c(
+  1:3, # SkM ctrl
+  4,6,7,5,8,9, # SkM SUPERase
+  12,13,10,11 # # SkM Protector
+  )
+visListPlot(
+    vis.list[i],
+    sample.titles = stringr::str_remove_all(meta_vis$sample[i],pattern = "Vis_") %>%
+        stringr::str_remove_all(pattern ="yPAP_")%>%
+        stringr::str_remove_all(pattern ="ctrl_")%>%
+        stringr::str_remove_all(pattern ="_Heart"),
+    reduction="space",
+    # slot = 'counts',
+    pt.size=1.2,
+    legend.position = "bottom",
+    font.size = 12,
+    axis.title.angle.y=0,
+    nrow = 1,
+    combine = T,
+    verbose=F,
+    colormap = mckolors$cubs,
+    features = "pct.miRNA"
+)
+```
+
 
 # Add smallRNA as new assay
 ## Read in matrices - SoloTotal
