--- a/scripts/rmd_notebooks/muscle_analysis.Rmd
+++ b/scripts/rmd_notebooks/muscle_analysis.Rmd
@@ -11,10 +11,10 @@ library(future)
 
 library(ggplot2)
 library(patchwork)
-library(pals)
 library(viridis)
 library(data.table)
 library(shades)
+
 source("/home/dwm269/DWM_utils/plotting_utils/scThemes.R")
 source("/home/dwm269/DWM_utils/sc_utils/seurat_helpers/seutils.R")
 source("/home/dwm269/DWM_utils/sc_utils/seurat_helpers/seuplots.R")
@@ -29,11 +29,6 @@ line.width = 0.5
 pt.size=0.01
 pt.stroke=0.3
 label.size=2
-
-# colors
-colPals <- list()
-# colPals[["sample"]] <- ggsci::pal_rickandmorty()(meta_vis$sample %>% unique() %>% length())
-colPals[["celltypes"]] <- as.vector(pals::polychrome())[3:32]
 ```
 
 ## Plot themes 
@@ -48,14 +43,13 @@ scTheme <- scThemes(
 )
 
 print(names(scTheme))
-
 ```
 
 ```{r}
 mckolors <- read.csv("/home/dwm269/DWM_utils/plotting_utils/McKolors_v1.csv") %>% 
   as.list() %>%
   lapply(
-    # FUN=function(X) X[X!=""]
+    FUN=function(X) X[X!=""]
   )
 mckolors
 ```
@@ -63,6 +57,7 @@ mckolors
 # Load and subset preprocessed Visium +/- spTotal data
 ```{r}
 load("/local/workdir/dwm269/totalRNA/spTotal/robjs/vis_list_v2.RData")
+cat("Done.")
 ```
 
 # Load metadata
@@ -74,7 +69,186 @@ skm.list <- vis.list[meta_vis$tissue=="muscle"&meta_vis$rnase_inhib%in%c("ctrl",
 meta_skm
 ```
 
+# STARsolo vs. kallisto/BUStools
+```{r}
+suppressMessages(
+  visListPlot(
+    skm.list,
+    sample.titles = stringr::str_remove_all(meta_skm$sample,pattern = "Vis_") %>%
+      stringr::str_remove_all(pattern ="_SkM"),
+    reduction="space",
+    # slot = 'counts',
+    pt.size=0.4,
+    legend.position = "bottom",
+    font.size = 6,
+    axis.title.angle.y=0,
+    nrow = 1,
+    combine = T,
+    verbose=F,
+    colormap = mckolors$Spectral %>% rev(),
+    features = c(
+      "nFeature_STARsolo","nFeature_kallisto",
+      "nCount_STARsolo","nCount_kallisto"
+    )
+  )&theme(
+    legend.text = element_text(size=6)
+  )
+)
+```
+Scatter plot for each spot, colored by preproceessing, to look at # Features and # UMIs detected by STARsolo vs. kallisto
+```{r fig.height=6, fig.width=12}
+if(!exists("skm.merged")){
+  skm.merged <- merge(
+    skm.list[[1]],
+    skm.list[2:length(skm.list)],
+    add.cell.ids = meta_skm$sample
+  )
+}
+wrap_plots(
+  ggplot(
+    skm.merged@meta.data[sample(rownames(skm.merged@meta.data)),],
+    aes(
+      x=nFeature_STARsolo,
+      y=nFeature_kallisto,
+      color=polyA
+    )
+  )+
+    geom_point(alpha=0.5)+
+    geom_abline()+
+    scTheme$fig1bcd+
+    scale_color_manual(values=mckolors$capitals)+
+    guides(color=guide_legend(override.aes = list(size=4,alpha=1,fill=NA))),
+  
+  ggplot(
+    skm.merged@meta.data[sample(rownames(skm.merged@meta.data)),],
+    aes(
+      x=nCount_STARsolo,
+      y=nCount_kallisto,
+      color=polyA
+    )
+  )+
+    geom_point(alpha=0.5)+
+    geom_abline()+
+    scTheme$fig1bcd+
+    scale_color_manual(values=mckolors$capitals)+
+    guides(color=guide_legend(override.aes = list(size=4,alpha=1,fill=NA))),
+  guides = "collect"
+)&theme(
+  legend.position="right"
+)
+```
+# biomaRt
+```{r}
+if(!exists("mouse.info")){
+  mouse = biomaRt::useMart(
+    # biomart = "ENSEMBL_MART_MOUSE",
+   biomart = "ENSEMBL_MART_ENSEMBL",
+    dataset = "mmusculus_gene_ensembl"
+    # host = "https://apr2020.archive.ensembl.org" ##for mm10 info
+  )
+  mouse.info <- biomaRt::getBM(
+    attributes = c(
+      "mgi_symbol", "gene_biotype","transcript_biotype", 
+      # "description", "name_1006","definition_1006","external_gene_name",
+      "ensembl_gene_id","ensembl_transcript_id","ensembl_peptide_id",
+      "chromosome_name","transcript_length", "strand"
+    ),
+    uniqueRows = T,
+    # host = "useast.ensembl.org",
+    verbose = T,
+    mart = mouse
+  )
+}
 
+cat(
+  paste("Using", length(unique(mouse.info$mgi_symbol)), "genes, and ",length(unique(mouse.info$gene_biotype)),"biotypes...\n")
+)
+```
+
+# Print highly expressed miRNAs for each object
+```{r}
+trnas <- mouse.info$ensembl_gene_id[mouse.info$gene_biotype=="miRNA"]
+top.trnas <- lapply(
+  skm.list,
+  FUN = function(VIS) grepGenes(
+    VIS,
+    assay="kallisto",
+    pattern = mirnas,
+    verbose = F
+  ) 
+)
+
+lapply(
+  top.trnas,
+  FUN = function(X) X %>%
+    head(n=20) %>%
+    print()
+)
+```
+# Print highly expressed tRNAs for each object
+```{r}
+mirnas <- mouse.info$ensembl_gene_id[mouse.info$gene_biotype %in% c("Mt_tRNA")]
+top.mirs <- lapply(
+  skm.list,
+  FUN = function(VIS) grepGenes(
+    VIS,
+    assay="kallisto",
+    pattern = mirnas
+  ) 
+)
+
+lapply(
+  top.mirs,
+  FUN = function(X) X %>%
+    head(n=20) %>%
+    print()
+)
+```
+
+
+# Gene spatial feature plots
+```{r}
+i=c(6,7,4,5)
+suppressMessages(
+  visListPlot(
+    skm.list[i],
+    sample.titles = stringr::str_remove_all(meta_skm$sample[i], pattern = "Vis_") %>%
+      stringr::str_remove_all(pattern ="_SkM"),
+    reduction="space",
+    assay="kallisto",
+    slot = 'data',
+    pt.size=1,
+    legend.position = "bottom",
+    font.size = 6,
+    axis.title.angle.y=0,
+    nrow = 1,
+    combine = T,
+    verbose=F,
+    # colormap = mckolors$Spectral %>% rev(),
+    # features = c(
+    #   "ENSMUSG00000106348", #Mir1a-2
+    #   "ENSMUSG00000065453", #Mirlet7d
+    #   "ENSMUSG00000065405", # Mir30a
+    #   "ENSMUSG00000065516", # Mir214
+    #   "ENSMUSG00000065480" # Mir133b
+    # ),
+    # alt.titles = c(
+    #   "Mir1a-2", #ENSMUSG00000106348
+    #   "Mirlet7d", #ENSMUSG00000065453
+    #   "Mir30a", #ENSMUSG00000065405
+    #   "Mir214", #ENSMUSG00000065516
+    #   "Mir133b" #ENSMUSG00000065480
+    # )
+    
+    features = lapply(
+      top.trnas[4:7],# top tRNAs in polyA samples...
+      function(X) head(X, n=8)
+    ) %>% unlist() %>% unique() %>% head(n=10)
+  )&theme(
+    legend.text = element_text(size=6)
+  )
+)
+```
 
 
 
